--- a/config.env
+++ b/config.env
@@ -1,9 +1,9 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
-KERNEL_IMAGE_NAME=Image.gz-dtb
+KERNEL_SOURCE=https://github.com/dsunnerer/kernel_apollo
+KERNEL_SOURCE_BRANCH=eleven
+KERNEL_CONFIG=vendor/apollo_user_defconfig
+KERNEL_IMAGE_NAME=Image.gz
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
@@ -18,12 +18,12 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r450784e
+CLANG_BRANCH=android11-release
+CLANG_VERSION=r377782c
 
 # GCC
 ENABLE_GCC_ARM64=true
-ENABLE_GCC_ARM32=true
+ENABLE_GCC_ARM32=false
 USE_CUSTOM_GCC_64=false
 CUSTOM_GCC_64_SOURCE=
 CUSTOM_GCC_64_BRANCH=
@@ -34,16 +34,16 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-ENABLE_KERNELSU=false
-KERNELSU_TAG=main
+ENABLE_KERNELSU=true
+KERNELSU_TAG=v0.7.1
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
 # Configuration
 DISABLE-LTO=false
-DISABLE_CC_WERROR=false
-ADD_KPROBES_CONFIG=false
-ADD_OVERLAYFS_CONFIG=false
+DISABLE_CC_WERROR=true
+ADD_KPROBES_CONFIG=true
+ADD_OVERLAYFS_CONFIG=true
 
 # Ccache
 ENABLE_CCACHE=true
@@ -52,5 +52,5 @@ ENABLE_CCACHE=true
 NEED_DTBO=false
 
 # Build boot images
-BUILD_BOOT_IMG=false
-SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
+BUILD_BOOT_IMG=true
+SOURCE_BOOT_IMAGE=https://download1588.mediafire.com/rqnokdax7z7gmbPFNnhSROlZJRKkMtPfSbGXVO_u0Yz-KYkItiKkyBexz1CuGUvLHgrGPT6dyo9uCJ0nKVrwSsDSzRryUt_Z6kMdTnPNpLogYIeNLxgTB2FFNNiTsxg068sFAmz13rR45xY_g34Q2Y_CjWDQbIj8A6krvi5RmAbZ1Q/gd9a9nwfdql4kw2/boot.img
