--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/dsunnerer/kernel_apollo
-KERNEL_SOURCE_BRANCH=eleven
-KERNEL_CONFIG=vendor/apollo_user_defconfig
+KERNEL_SOURCE=https://github.com/Rohail33/Realking_kernel_sm8250
+KERNEL_SOURCE_BRANCH=non-ksu
+KERNEL_CONFIG=vendor/xiaomi/apollo.config
 KERNEL_IMAGE_NAME=Image.gz
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
