--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/Rohail33/Realking_kernel_sm8250
 KERNEL_SOURCE_BRANCH=non-ksu
-KERNEL_CONFIG=vendor/xiaomi/apollo.config
+KERNEL_CONFIG=apollo_defconfig
 KERNEL_IMAGE_NAME=Image.gz
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
