--- a/config.env
+++ b/config.env
@@ -6,7 +6,7 @@ KERNEL_CONFIG=vendor/apollo_user_defconfig
 KERNEL_IMAGE_NAME=Image.gz
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
-EXTRA_CMDS:LD=ld.lld CROSS_COMPILE=aarch64-linux-androidkernel-
+EXTRA_CMDS:LD=ld.lld CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-androidkernel-
 
 # Clang
 ## Custom
