--- a/config.env
+++ b/config.env
@@ -52,5 +52,5 @@ ENABLE_CCACHE=true
 NEED_DTBO=false
 
 # Build boot images
-BUILD_BOOT_IMG=false
+BUILD_BOOT_IMG=true
 SOURCE_BOOT_IMAGE=https://download1588.mediafire.com/4g7gb16ttwzgucUFIN2q42TPK2F_TPqj3TYan-Vu4koQxGZPq4oKYEyEYInFLG87Tw0VDEFmPAvshVn_dCuWEhqxK1K6Vo7qPj_q08hevejqDW0Scs30C_KPCq812pO8_SFflr8Ob3173ghNn6mGGsnmvugseyMMZ4yPvkH0lq-sPA/gd9a9nwfdql4kw2/boot.img
